v0.10.0/_sources/generated/statsmodels.gam.generalized_additive_model.LogitGam.rst.txt
statsmodels.gam.generalized\_additive\_model.LogitGam
=====================================================

.. currentmodule:: statsmodels.gam.generalized_additive_model

.. autoclass:: LogitGam

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         LogitGam.cdf
         LogitGam.cov_params_func_l1
         LogitGam.fit
         LogitGam.fit_regularized
         LogitGam.from_formula
         LogitGam.hessian
         LogitGam.hessian_numdiff
         LogitGam.information
         LogitGam.initialize
         LogitGam.loglike
         LogitGam.loglikeobs
         LogitGam.pdf
         LogitGam.predict
         LogitGam.score
         LogitGam.score_numdiff
         LogitGam.score_obs



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         LogitGam.endog_names
         LogitGam.exog_names

