v0.15.0/_sources/generated/statsmodels.gam.generalized_additive_model.LogitGam.rst.txt
statsmodels.gam.generalized\_additive\_model.LogitGam
=====================================================

.. currentmodule:: statsmodels.gam.generalized_additive_model

.. autoclass:: LogitGam
   :exclude-members: cdf,cov_params_func_l1,fit,fit_constrained,fit_regularized,from_formula,get_distribution,hessian,hessian_factor,hessian_numdiff,information,initialize,loglike,loglikeobs,pdf,predict,score,score_factor,score_numdiff,score_obs,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~LogitGam.cdf
      ~LogitGam.cov_params_func_l1
      ~LogitGam.fit
      ~LogitGam.fit_constrained
      ~LogitGam.fit_regularized
      ~LogitGam.from_formula
      ~LogitGam.get_distribution
      ~LogitGam.hessian
      ~LogitGam.hessian_factor
      ~LogitGam.hessian_numdiff
      ~LogitGam.information
      ~LogitGam.initialize
      ~LogitGam.loglike
      ~LogitGam.loglikeobs
      ~LogitGam.pdf
      ~LogitGam.predict
      ~LogitGam.score
      ~LogitGam.score_factor
      ~LogitGam.score_numdiff
      ~LogitGam.score_obs
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~LogitGam.endog_names
      ~LogitGam.exog_names
      ~LogitGam.family
      ~LogitGam.link
   
   
   